--- a/index.html
+++ b/index.html
@@ -1,29 +1,25 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>City Survival</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>City Survival: Sputnik Edition</title>
+  <link href="style.css" rel="stylesheet" />
+  <script src="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js"></script>
+  <link href="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css" rel="stylesheet" />
 </head>
 <body>
-  <canvas id="gameCanvas" width="800" height="600"></canvas>
-
-  <div id="controls">
-    <button id="exitShelter">🚶 Выйти</button>
-    <button id="build" disabled>🧱 Строить</button>
+  <div id="map"></div>
+  <div id="overlay"></div>
+  <div id="ui">
+    <button id="buildBtn">🏗️ Построить</button>
+    <button id="allyBtn">🧍 Союзники</button>
+    <button id="gatherBtn">📦 Собрать</button>
+    <button id="restBtn">💤 Отдых</button>
   </div>
-
-  <div id="allies-box">
-    <button id="allies-btn">🧍 Союзники</button>
-    <div id="allies-info">Союзники: 0</div>
-    <div id="resources-info">Ресурсы: 0</div>
-  </div>
-
   <div id="joystick">
     <div id="stick"></div>
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
