--- a/index.html
+++ b/index.html
@@ -10,30 +10,40 @@
   <script src="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.js"></script>
 </head>
 <body>
-  <!-- 1) Стартовый экран -->
+  <!-- 1. Стартовый экран -->
   <div id="welcome-screen" class="screen active">
     <div class="welcome-content">
       <h1>City Survival</h1>
-      <p class="subtitle">Начни выживание в своём городе</p>
-      <button id="start-button" class="game-button">Начать игру</button>
+      <p class="subtitle">Выживай. Строй. Защищайся.</p>
+      <button id="start-button" class="main-btn">Начать</button>
     </div>
   </div>
 
-  <!-- 2) Экран выбора точки на карте -->
-  <div id="select-screen" class="screen">
-    <div id="select-map"></div>
-    <div class="map-ui">
-      <p>Нажми на карту, чтобы выбрать точку старта</p>
-      <button id="confirm-button" disabled>Выбрать место</button>
+  <!-- 2. Выбор города -->
+  <div id="city-screen" class="screen">
+    <div id="city-map" class="map-area"></div>
+    <div class="bottom-panel">
+      <p>Нажмите на карту, чтобы выбрать город.</p>
+      <button id="confirm-city" class="main-btn" disabled>Подтвердить город</button>
+      <button id="back-to-start" class="sec-btn">Назад</button>
     </div>
   </div>
 
-  <!-- 3) Игровой экран -->
+  <!-- 3. Выбор базы в выбранном городе -->
+  <div id="base-screen" class="screen">
+    <div id="base-map" class="map-area"></div>
+    <div class="bottom-panel">
+      <p>Нажмите на карту, чтобы выбрать место для базы.</p>
+      <button id="confirm-base" class="main-btn" disabled>Подтвердить базу</button>
+      <button id="back-to-city" class="sec-btn">Назад</button>
+    </div>
+  </div>
+
+  <!-- 4. Игровой экран -->
   <div id="game-screen" class="screen">
-    <div id="map"></div>
-    <div id="overlay"></div>
+    <div id="game-map" class="map-area"></div>
 
-    <div id="ui">
+    <div id="ui" class="ui">
       <div id="leftPanel">
         <div id="stats">🧍 Союзники: <span id="allyCount">0</span> | 📦 Ресурсы: <span id="resourcesCount">0</span></div>
       </div>
