--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>City Survival</title>
 
   <link rel="stylesheet" href="style.css" />
@@ -10,8 +10,10 @@
   <script src="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.js"></script>
 </head>
 <body>
-  <!-- 1) Стартовый экран -->
+
+  <!-- 🌆 Стартовый экран -->
   <div id="welcome-screen" class="screen active">
+    <div class="fog"></div>
     <div class="welcome-content">
       <h1>City Survival</h1>
       <p class="subtitle">Выживай. Строй. Исследуй свой город.</p>
@@ -19,35 +21,33 @@
     </div>
   </div>
 
-  <!-- 2) Выбор города -->
+  <!-- 🏙 Экран выбора города -->
   <div id="city-screen" class="screen">
     <div id="city-map" class="map-area"></div>
     <div class="bottom-panel">
-      <p>Нажмите на карту, чтобы выбрать город.</p>
-      <button id="confirm-city" class="main-btn" disabled>Подтвердить город</button>
+      <p>Выберите город на карте</p>
+      <button id="confirm-city" class="main-btn" disabled>Подтвердить</button>
       <button id="back-to-start" class="sec-btn">Назад</button>
     </div>
   </div>
 
-  <!-- 3) Выбор базы в выбранном городе -->
+  <!-- 🏠 Экран выбора базы -->
   <div id="base-screen" class="screen">
     <div id="base-map" class="map-area"></div>
     <div class="bottom-panel">
-      <p>Нажмите на карте, чтобы выбрать место для базы.</p>
-      <button id="confirm-base" class="main-btn" disabled>Подтвердить базу</button>
+      <p>Выберите место для базы</p>
+      <button id="confirm-base" class="main-btn" disabled>Подтвердить</button>
       <button id="back-to-city" class="sec-btn">Назад</button>
     </div>
   </div>
 
-  <!-- 4) Игровой экран -->
+  <!-- 🎮 Игровой экран -->
   <div id="game-screen" class="screen">
     <div id="game-map" class="map-area"></div>
 
     <div id="ui" class="ui">
-      <div id="leftPanel">
-        <div id="stats">🧍 Союзники: <span id="allyCount">0</span> | 📦 Ресурсы: <span id="resourcesCount">0</span></div>
-      </div>
-      <div id="rightPanel">
+      <div id="stats">🧍 Союзники: <span id="allyCount">0</span> | 📦 Ресурсы: <span id="resourcesCount">0</span></div>
+      <div id="buttons">
         <button id="buildBtn">🧱 Строить</button>
         <button id="gatherBtn">📦 Собрать</button>
         <button id="allyBtn">🧍 Союзники</button>
@@ -55,9 +55,7 @@
       </div>
     </div>
 
-    <div id="joystick">
-      <div id="stick"></div>
-    </div>
+    <div id="joystick"><div id="stick"></div></div>
   </div>
 
   <script src="script.js"></script>
